--- a/arch/arm/configs/woods_defconfig
+++ b/arch/arm/configs/woods_defconfig
@@ -218,6 +218,7 @@ CONFIG_MTK_VIDEOCODEC_DRIVER=y
 CONFIG_MTK_FB=y
 CONFIG_MTK_VIDEOX=y
 CONFIG_MTK_LCM_PHYSICAL_ROTATION="0"
+CONFIG_MTK_VIDEOX_CYNGN_LIVEDISPLAY=y
 ##xuzhifeng@wind-mobi.com 20161119 begin
 CONFIG_LCM_HEIGHT="1280"
 CONFIG_LCM_WIDTH="720"
